fix: Center align and no-elipsis admin message

--- a/src/ui/AdminMessage/index.scss
+++ b/src/ui/AdminMessage/index.scss
@@ -7,7 +7,5 @@
 
   .sendbird-admin-message__text {
     display: flex;
-    width: 100%;
-    word-break: break-word;
   }
 }
